# airflow-providers-siafi

./: README.md  setup.cfg
airflow/providers/siafi/: __init__.py  provider.yaml
siafi/: __init__.py  provider.yaml
