[metadata]
name = airflow-providers-siafi
version = attr: airflow.providers.siafi.VERSION
description = Provider para interações com o SIAFI e seus sistemas derivados
long_description = file: README.md
long_description_content_type = text/markdown
keywords = airflow, siafi, administracao, governo
url = 'https://github.com/CarlosAdp/airflow-providers-siafi.git'
download_url = 'https://github.com/CarlosAdp/airflow-providers-siafi.git/tarball/2.0.0'
license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = carlos.adpinto@gmail.com

[options]
packages = find_namespace:
install_requires =
    apache-airflow
include_package_data = True